# sort-me-out

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  backend.dockerfile
backend/app/: alembic.ini  pyproject.toml  requirements.txt  requirements_test.txt  sql_app.db
backend/app/alembic/: env.py
backend/app/app/: main.py
backend/app/app/core/: config.py
backend/app/app/crud/: crud.py  crud_booking.py  crud_holiday.py
backend/app/app/db/: init_db.py  session.py
backend/app/app/models/: __init__.py  availability.py  booking.py
backend/app/app/schemas/: __init__.py  booking.py  dayslot.py  holiday.py
backend/app/app/tests/: test_api.py
sort-me-out/: crud.py  main.py  schemas.py
