[tool.poetry]
name = "app"
version = "0.1.0"
description = "Sort Me Out from todo list mess"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"
pydantic = "^1.4"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
pytest = "^5.4.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
